[project]
name = "ewfscover"
version = "0.1.2"
requires-python = ">=3.13"
dependencies = [
    "homeassistant>=2025.4.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[tool.uv]
exclude-newer = "14 days"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "homeassistant-stubs>=2025.4.4",
    "pre-commit>=4.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.12",
]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = ["ESPHome/codes"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "RUF046", # int(round(...)) is intentionally explicit
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components"]
